# fast-binomial

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  build.py  fixformat.sh  pyproject.toml  setup.py
examples/: repeatable_test.py  test.py
fast_binomial/: __init__.py
src/: fast_binomial.cpp  fast_binomial.h  fast_binomial.inl  main.cpp
src/stubs/fast_binomial_cpp-stubs/: __init__.pyi
