[tool.poetry]
name = "fast-binomial"
version = "0.1.0"
description = ""
authors = ["mark-todd <markpeter.todd@hotmail.co.uk>"]

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
pybind11 = "^2.10.1"
numpy = "^1.23.5"
requests = "^2.28.1"
setuptools = "^65.6.3"


[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
autoflake = "^1.4"
pre-commit = "^2.17.0"
ipython = "^8.7.0"
pybind11-stubgen = "^0.11.0"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools", "pybind11", "requests"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
script = "build.py"

[tool.pyright]
venvPath="./"
venv=".venv"
