[tool.poetry]
name = "fast-binomial"
version = "0.1.0"
description = ""
authors = ["mark-todd <markpeter.todd@hotmail.co.uk>"]

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
pybind11 = "^2.6.1"
numpy = "^1.23.5"
requests = "^2.28.1"


[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
autoflake = "^1.4"
pre-commit = "^2.17.0"
ipython = "^8.7.0"
pybind11-stubgen = "^0.11.0"

[build-system]
requires = ["setuptools>=42", "wheel", "pybind11~=2.6.1", "requests"]
build-backend = "setuptools.build_meta"

[tool.poetry.build]
script = "setup.py"

[tool.pyright]
venvPath="./"
venv=".venv"
